--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,5 +17,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.android.support:support-v4:24.1.1'
 }
