hook up the app to the library

--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 29 20:42:26 EDT 2016
-ndk.dir=F\:\\Android\\android-sdk\\ndk-bundle
-sdk.dir=F\:\\Android\\android-sdk
+#Sat Sep 24 11:42:13 EDT 2016
+sdk.dir=C\:\\Users\\Phaseshifter\\AppData\\Local\\Android\\android-sdk
