--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 android {
     compileSdkVersion 24
-    buildToolsVersion "24"
+    buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "com.phaseshiftlab.cyrilliscript"
         minSdkVersion 19
@@ -18,5 +18,6 @@ android {
 
 dependencies {
     compile 'com.facebook.stetho:stetho:1.3.1'
-    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile project(path: ':ocrlib')
 }
