--- a/ocrlib/src/main/AndroidManifest.xml
+++ b/ocrlib/src/main/AndroidManifest.xml
@@ -4,12 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:supportsRtl="true">
         <service
             android:name=".OcrService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
     </application>
 
 </manifest>
