--- a/ocrlib/src/main/AndroidManifest.xml
+++ b/ocrlib/src/main/AndroidManifest.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.phaseshiftlab.ocrlib">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
         <service
             android:name=".OcrService"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="false" />
+        <activity
+            android:name=".PermissionRequester$PermissionRequestActivity" >
+        </activity>
     </application>
 
 </manifest>
