--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "com.phaseshiftlab.cyrilliscript"
         minSdkVersion 19
@@ -17,7 +17,8 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.stetho:stetho:1.3.1'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.android.support:support-v4:25.0.1'
     compile project(path: ':ocrlib')
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
