--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ android {
     defaultConfig {
         applicationId "com.phaseshiftlab.cyrilliscript"
         minSdkVersion 19
+        jackOptions {
+            enabled true
+        }
     }
     buildTypes {
         release {
@@ -14,11 +17,18 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.android.support:support-v4:25.2.0'
     compile project(path: ':ocrlib')
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
+    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
 }
