--- a/ocrlib/build.gradle
+++ b/ocrlib/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.rmtheis:tess-two:6.0.4'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
+    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
     testCompile 'junit:junit:4.12'
 }
