--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 05 20:34:39 EST 2016
-ndk.dir=F\:\\Android\\android-sdk\\ndk-bundle
-sdk.dir=F\:\\Android\\android-sdk
+    sdk.dir=C\:\\Users\\Phaseshifter\\AppData\\Local\\Android\\android-sdk
+
