--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.android.support:support-v4:25.3.0'
     compile project(path: ':ocrlib')
+    compile project(path: ':languagelib')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.7'
