--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,6 @@ android {
     defaultConfig {
         applicationId "com.phaseshiftlab.cyrilliscript"
         minSdkVersion 19
-        jackOptions {
-            enabled true
-        }
     }
     buildTypes {
         release {
@@ -18,18 +15,16 @@ android {
     productFlavors {
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility 1.7
+        sourceCompatibility 1.7
     }
 }
 
 dependencies {
     compile 'com.facebook.stetho:stetho:1.4.2'
-    compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.android.support:support-v4:25.3.1'
     compile project(path: ':ocrlib')
     compile project(path: ':languagelib')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
-    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
