--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.phaseshiftlab.cyrilliscript"
-        minSdkVersion 19
+        minSdkVersion 22
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -24,6 +24,7 @@ android {
 dependencies {
     compile project(path: ':ocrlib')
     compile project(path: ':languagelib')
+    compile project(path: ':eventslib')
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
