Created OcrFileUtils and moved the PermissionRequestActivity to ocrlib. Yet to be renamed

--- a/ocrlib/src/main/AndroidManifest.xml
+++ b/ocrlib/src/main/AndroidManifest.xml
@@ -5,11 +5,19 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@android:style/Theme.Material.NoActionBar.TranslucentDecor">
         <service
             android:name=".OcrService"
             android:enabled="true"
             android:exported="false" />
+        <activity android:name="com.phaseshiftlab.ocrlib.PermissionRequestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
