--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 18 14:34:54 EDT 2017
-ndk.dir=F\:\\Android\\android-sdk\\ndk-bundle
-sdk.dir=F\:\\Android\\android-sdk
+#Thu Apr 06 20:09:08 EDT 2017
+sdk.dir=C\:\\Users\\Phaseshifter\\AppData\\Local\\Android\\android-sdk
