--- a/ocrlib/build.gradle
+++ b/ocrlib/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile project(path: ':eventslib')
+    compile project(path: ':languagelib')
 }
