--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,21 @@
 apply plugin: 'com.android.application'
+
+// keystore.properties file, in the rootProject folder.
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+
+// Initialize a new Properties() object called keystoreProperties.
+def keystoreProperties = new Properties()
+
+// Load your keystore.properties file into the keystoreProperties object.
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
     signingConfigs {
         config {
-            keyAlias 'udacity'
-            keyPassword 'Hooligan'
-            storeFile file("$rootDir/cyrilliscript.jks")
-            storePassword 'AzBukiVedi'
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
         }
     }
     compileSdkVersion 25
