--- a/ocrlib/build.gradle
+++ b/ocrlib/build.gradle
@@ -23,14 +23,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.3-alpha', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.rmtheis:tess-two:7.0.0'
+    implementation 'com.rmtheis:tess-two:8.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation project(path: ':eventslib')
     implementation project(path: ':languagelib')
 }
