--- a/ocrlib/build.gradle
+++ b/ocrlib/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation project(path: ':eventslib')
     implementation project(path: ':languagelib')
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
