--- a/eventslib/build.gradle
+++ b/eventslib/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
