--- a/languagelib/build.gradle
+++ b/languagelib/build.gradle
@@ -30,13 +30,13 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.3-alpha', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version") {
+    implementation('org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.60') {
         exclude group: 'org.jetbrains', module: 'annotations'
     }
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
