force kotlin deps (https://github.com/nhaarman/mockito-kotlin/issues/156)

--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,14 @@ allprojects {
         google()
     }
 }
+
+subprojects {
+    configurations.all {
+        resolutionStrategy {
+            forcedModules = [
+                    "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
+                    "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+            ]
+        }
+    }
+}
