--- a/languagelib/build.gradle
+++ b/languagelib/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation('org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.60') {
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version") {
         exclude group: 'org.jetbrains', module: 'annotations'
     }
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
