--- a/ocrlib/build.gradle
+++ b/ocrlib/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation project(path: ':eventslib')
     implementation project(path: ':languagelib')
     implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
