--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "com.phaseshiftlab.cyrilliscript"
         minSdkVersion 23
@@ -54,8 +54,8 @@ dependencies {
     implementation project(path: ':languagelib')
     implementation project(path: ':eventslib')
     testImplementation "org.robolectric:robolectric:3.5.1"
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:support-v4:28.0.0-rc02'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0-rc02'
 }
