--- a/languagelib/build.gradle
+++ b/languagelib/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.2"
 
     defaultConfig {
         minSdkVersion 23
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -33,10 +33,10 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.3-alpha', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     testImplementation 'junit:junit:4.12'
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version") {
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version") {
         exclude group: 'org.jetbrains', module: 'annotations'
     }
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -56,8 +56,8 @@ dependencies {
     // Support-v4 (Anko Layouts)
     implementation "org.jetbrains.anko:anko-support-v4:$anko_version"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
 }
 repositories {
     mavenCentral()
