--- a/languagelib/build.gradle
+++ b/languagelib/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.3-alpha', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
     testImplementation 'junit:junit:4.12'
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version") {
@@ -57,7 +57,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-support-v4:$anko_version"
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc02'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 repositories {
     mavenCentral()
