--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,9 @@ dependencies {
     implementation project(path: ':ocrlib')
     implementation project(path: ':languagelib')
     implementation project(path: ':eventslib')
-    testImplementation "org.robolectric:robolectric:3.5.1"
-    implementation 'com.android.support:support-v4:28.0.0'
+    testImplementation "org.robolectric:robolectric:4.1"
+    implementation 'androidx.core:core:1.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
 }
