--- a/ocrlib/build.gradle
+++ b/ocrlib/build.gradle
@@ -27,14 +27,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.rmtheis:tess-two:8.0.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation project(path: ':eventslib')
     implementation project(path: ':languagelib')
     implementation 'com.facebook.stetho:stetho:1.5.0'
